src/snapshots/treesitter_example__tests__parse_sexp_single.snap
---
source: src/main.rs
expression: "parse_sexp(\"(single)\")"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                1,
                2,
            ),
            content: "single",
        },
        Token {
            kind: CloseParen,
            range: (
                7,
                8,
            ),
            content: ")",
        },
    ],
)
