src/snapshots/treesitter_example__tests__parse_sexp_tree.snap
---
source: src/main.rs
expression: parse_sexp(sexp)
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: CloseParen,
            range: (
                1,
                2,
            ),
            content: ")",
        },
    ],
)
